--- a/src/assets/css/case.css
+++ b/src/assets/css/case.css
@@ -1,4 +1,9 @@
 /* iPod case  */
+.case-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 8vh;
+}
 .case{
     height: 500px;
     width: 300px;
