--- a/src/assets/css/playing.css
+++ b/src/assets/css/playing.css
@@ -9,14 +9,13 @@
 .song-details{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 15px;
     box-sizing: border-box;
     padding: 10px;
 }
 
 /* img in song details */
 .song-details img{
-    margin: auto;
     margin-top: 10px;
     width: 110px;
     height: 110px;
